--- a/manuals/fsrefsinfo.1
+++ b/manuals/fsrefsinfo.1
@@ -1,23 +1,23 @@
-.Dd September 15, 2013
+.Dd June 28, 2023
 .Dt fsrefsinfo
 .Os libfsrefs
 .Sh NAME
 .Nm fsrefsinfo
-.Nd determines information about a Windows Resiliant File System (REFS)
+.Nd determines information about a Resiliant File System (ReFS)
 .Sh SYNOPSIS
 .Nm fsrefsinfo
 .Op Fl ahvV
 .Va Ar source
 .Sh DESCRIPTION
 .Nm fsrefsinfo
-is a utility to determine information about a Windows Resiliant File System (REFS)
+is a utility to determine information about a Resiliant File System (ReFS)
 .Pp
 .Nm fsrefsinfo
 is part of the
 .Nm libfsrefs
 package.
 .Nm libfsrefs
-is a library to access the Windows Resiliant File System (REFS) format
+is a library to access the Resiliant File System (ReFS) format
 .Pp
 .Ar source
 is the source file.
@@ -42,7 +42,7 @@ None
 # fsrefsinfo /dev/sda1
 fsrefsinfo 20130915
 
-Windows Resiliant File System (REFS) volume information:
+Resiliant File System (ReFS) volume information:
 .Dl        ...
 
 .Ed
